2002-04-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/system.h: Add i386 to multilib-able targets.

2001-04-11	Joel Sherrill <joel@OARcorp.com>

	
	* macros/rtems/score/userext.inl: Now works after merging patch for
	functionality requested in PR174.
	* inline/rtems/score/userext.inl: Added a comment explaining the
	order in which routines appear since it is not the obvious order.
 
2002-04-08	Chris Johns <ccj@acm.org>

	* Per PR141 and PR174, make task switch extension its own list and
	fix all odd problems introduced by providing macro version.
	* inline/rtems/score/userext.inl: Fix.

2001-04-08	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/score/object.inl: Corrected arguments.
 
2001-04-08	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/score/userext.inl: Updated to reflect modifications
	to inline version from PR142.
	* inline/rtems/score/userext.inl: Cleanup as side-effect of above.
 
2002-04-08	Chris Johns <ccj@acm.org>

	* Per PR142, make task switch extension its own list.
	* include/rtems/score/userext.h: Reflect above by adding 
	User_extensions_Switch_control and adding it to User_extenions_Control.
	* inline/rtems/score/userext.inl: Allocate all memory in one chunk
	to minimize overhead.  Address processing dedicated switch chain.

2002-04-08	Chris Johns <ccj@acm.org>

	* Per PR142, make task switch extension its own list.
	* include/rtems/score/userext.h: Reflect above by adding 
	User_extensions_Switch_control and adding it to User_extenions_Control.
	* inline/rtems/score/userext.inl: Allocate all memory in one chunk
	to minimize overhead.  Address processing dedicated switch chain.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpu/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* inline/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* macros/Makefile.am: Remove AUTOMAKE_OPTIONS.
